<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2016 Ordnance Survey
  Copyright (C) 2016 The Android Open Source Project
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<resources>

    <string name="app_name">Search</string>

    <!-- Search -->
    <string name="search_hint">Search</string>
    <string name="search_no_results">Sorry, can\'t find it</string>
    <string name="search_error_network">No internet connection</string>
    <string name="search_error_http">Our fault, sorry. We\'ll ask our tech team to look into that.</string>
    <string name="search_error_conversion">Our fault, sorry - try again?</string>
    <string name="search_voice_prompt">Speak now</string>
    <string name="search_recents">Recent searches</string>
    <string name="search_error_recents">Oops!  Problem getting your recents</string>
    <string name="search_error_catch_all">Oops!  Something went wrong</string>
    <string name="search_clear_accessibility">Clear</string>
    <string name="search_microphone_accessibility">Microphone</string>

</resources>
