<?xml version="1.0" encoding="utf-8"?>

<!--
  Copyright (C) 2016 Ordnance Survey
  Copyright (C) 2016 The Android Open Source Project
  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at
       http://www.apache.org/licenses/LICENSE-2.0
  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/search_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/search_searchview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/action_container"
                android:hint="@string/search_hint"
                android:background="@null"
                android:singleLine="true"
                android:ellipsize="end"
                android:inputType="text|textAutoComplete|textNoSuggestions"
                android:imeOptions="actionSearch"
                android:layout_centerVertical="true"
                android:padding="5dp"
                style="@style/Source18" />

            <View
                android:id="@+id/search_searchview_line"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_below="@id/search_searchview"
                android:background="@color/light_blue300"
                android:layout_toLeftOf="@id/action_container"
                android:layout_toStartOf="@id/action_container" />

            <View
                android:id="@+id/search_searchview_line_empty"
                android:layout_height="1dp"
                android:layout_width="match_parent"
                android:layout_below="@id/search_searchview"
                android:background="@color/grey700"
                android:layout_toLeftOf="@id/action_container"
                android:layout_toStartOf="@id/action_container" />

            <LinearLayout
                android:id="@+id/action_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="false"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="false"
                android:layout_centerVertical="true">

                <ImageButton
                    android:id="@+id/search_clear"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_content_clear"
                    android:contentDescription="@string/search_clear_accessibility"
                    style="@style/TransparentButton" />

                <ImageButton
                    android:id="@+id/search_mic"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_av_mic"
                    android:contentDescription="@string/search_microphone_accessibility"
                    style="@style/TransparentButton" />

                <ImageButton
                    android:id="@+id/search_mic_hollow"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:src="@drawable/ic_av_mnone"
                    android:contentDescription="@string/search_microphone_accessibility"
                    style="@style/TransparentButton" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:id="@+id/search_recents"
        style="@style/Source24_Light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_recents"
        android:textColor="@color/white"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginBottom="@dimen/margin_10"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        />

    <TextView
        android:id="@+id/search_no_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/search_no_results"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        />

    <TextView
        android:id="@+id/search_error_network"
        style="@style/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/search_error_network"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        />

    <TextView
        android:id="@+id/search_error_http"
        style="@style/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/search_error_http"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        />

    <TextView
        android:id="@+id/search_error_conversion"
        style="@style/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:text="@string/search_error_conversion"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        />

    <TextView
        android:id="@+id/search_error_recents"
        style="@style/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_error_recents"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        />

    <TextView
        android:id="@+id/search_error_catch_all"
        style="@style/Error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_error_catch_all"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/margin_20"
        android:layout_marginRight="@dimen/margin_20"
        />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_results"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical"
        android:overScrollMode="never"
        tools:context=".MainActivity"
        tools:listitem="@layout/search_item"/>

</LinearLayout>